# python-automation-agentic-ai__4days

./: .gitignore
capstone-project/: README.md
capstone-project/start-here/: pyproject.toml
capstone-project/start-here/tests/: conftest.py  test_lab01.py  test_lab02.py  test_lab03.py  test_lab05.py  test_lab06.py
modules/day3-catchup-extra/: README.md  pyproject.toml
modules/day3-catchup-extra/catalog/: cli.py  models.py
modules/day3-catchup-extra/explorable_codelesson/: 07_Asynchronous_Testing.ipynb  08_Integration_and_Snapshots.ipynb  09_E2E_Testing_Playwright.ipynb  10_Test_Quality_and_CI.ipynb  README.md
modules/day3-catchup-extra/tests/: test_catalog.py
modules/day3-combined-lab/: .gitignore  README.md
modules/m01-python-core/: codealong-m01-python-core.ipynb  simple_notebook.ipynb  slides-m01-python-core.html  slides-m01-python-core.md
modules/m02-data-files/: codealong-m02-data-files.ipynb  slides-m02-data-files.html  slides-m02-data-files.md
modules/m03-oop-dataclasses-fastapi/: codealong-m03-oop-dataclasses-fastapi.ipynb  slides-m03-oop-dataclasses-fastapi.html  slides-m03-oop-dataclasses-fastapi.md
modules/m04-json-pydantic/: codealong-m04-json-pydantic.ipynb  slides-m04-json-pydantic.html  slides-m04-json-pydantic.md
modules/m05-rest-requests/: codealong-m05-rest-requests.ipynb  instructor-guide-m05.md  slides-m05-rest-requests.html  slides-m05-rest-requests.md
modules/m06-data-driven-csv/: codealong-m06-data-driven-csv.ipynb  slides-m06-data-driven-csv.html  slides-m06-data-driven-csv.md
modules/m07-pytest-basics/: codealong-m07-pytest-basics.ipynb  slides-m07-pytest-basics.html  slides-m07-pytest-basics.md
modules/m08-mocking/: codealong-m08-mocking.ipynb  slides-m08-mocking.html  slides-m08-mocking.md
modules/m09-coverage-ci/: codealong-m09-coverage-ci.ipynb  slides-m09-coverage-ci.html  (+1 more)
(+99 files in other folders)
